project dashboard html update

--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -185,7 +185,7 @@
                     <div class="widget-info margin-top-large">
                         <div class="widget-head">
                             <h4><a href="#" title="">Project Manager</a></h4>
-                            <a href="{% url 'userrole:project_user_create' project.pk %}"><i
+                            <a href="{% url 'userrole:userrole_create' project.pk %}"><i
                                 class="la la-user"></i>Add Manager</a>
                             </div>
                             <div class="widget-body">
