--- a/survey/userrole/templates/userrole/project_user_form.html
+++ b/survey/userrole/templates/userrole/project_user_form.html
@@ -8,6 +8,10 @@
         <ol class="breadcrumb">{% if request.user.is_superuser %}
             <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
 
+            {% else %}
+                <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' request.project.id %}">Dashboard</a></li>
+
+
         {% endif %}
             <li class="breadcrumb-item active" aria-current="page">User Create</li>
         </ol>
