report display name

--- a/survey/core/templates/core/report_detail.html
+++ b/survey/core/templates/core/report_detail.html
@@ -20,7 +20,7 @@
      <div class="widget-body">
         <ul class="submission-list">
             <li>
-                   <strong>{{ object.checklist.step_checklist }}</strong>
+                   <strong>{{ object.comment }}</strong>
                     <br>
                     {% if object.user %}
                         <a href="#" title="View details of user">
