--- a/survey/core/templates/core/site_detail_js.html
+++ b/survey/core/templates/core/site_detail_js.html
@@ -15,11 +15,12 @@
     template_data.site_id={{site_id}};
     template_data.site={{site|safe}};
     template_data.document_url="{{document_url}}";
+    template_data.document_create="{{add_document_url}}"
     template_data.add_user_url="{{add_user_url}}";
     template_data.people_url="{{people_url}}";
     template_data.site_edit_url="{{site_edit_url}}";
     template_data.site_delete_url="{{site_delete_url}}";
-
+    template_data.dashboard_url="{{dashboard_url}}";
 
     
 </script>
