--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -49,8 +49,8 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
                                     <a class="dropdown-item"
-                                       href="{% url 'userrole:project_user_create' project.pk %}"><i
-                                            class="la la-user"></i>Add User</a>                                    
+                                       href="{% url 'userrole:send_invitation' site.pk %}"><i
+                                            class="la la-user"></i>Add User</a>
                                     <a class="dropdown-item"
                                        href="{% url 'userrole:field_engineer_create' object.pk %}"><i
                                             class="la la-user"></i> People</a>
