--- a/survey/userrole/templates/userrole/send_email_invitation.html
+++ b/survey/userrole/templates/userrole/send_email_invitation.html
@@ -18,10 +18,13 @@
                 </ol>
             </nav>
         </div>
+    <div class="col-md-2">
+        <h6><strong>Send Invitation To:</strong></h6><br>
         <form method="post">{% csrf_token %}
             {{ form }}
-            <input type="submit" value="Send">
+            <br><input type="submit" value="Send" class="btn btn-sm btn-primary">
         </form>
+    </div>
     </div>
 {% endblock content %}
 {% block extra_script %}
