Check User before invitation

--- a/survey/userrole/templates/userrole/send_email_invitation.html
+++ b/survey/userrole/templates/userrole/send_email_invitation.html
@@ -22,6 +22,9 @@
             <h6><strong>Send Invitation To:</strong></h6><br>
             <form method="post">{% csrf_token %}
                 {{ form }}
+                {% if data %}
+                {{ data }}<br>
+                {% endif %}
                 <br><input type="submit" value="Send" class="btn btn-sm btn-primary">
             </form>
         </div>
