Dyanmic Link and mbf

--- a/survey/userrole/templates/userrole/project_user_form.html
+++ b/survey/userrole/templates/userrole/project_user_form.html
@@ -24,7 +24,7 @@
         </div>
             </div>
         </div>
-    </div>>
+    </div>
 {% endblock content %}
 {% block extra_script %}
     {% render_bundle 'project' 'js' %}
