--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -195,6 +195,8 @@
                             <div class="widget-head">
                                 <h4><a href="#" title="">Project Manager</a></h4>
                                 {% if request.user.is_superuser %}
+                                    <a href="{% url 'userrole:send_invitation' project.pk %}"><i
+                                            class="la la-user-plus"></i>Invite New User</a>
                                     <a href="{% url 'userrole:userrole_create' project.pk %}"><i
                                             class="la la-user"></i>Add Manager</a>
                                 {% endif %}
