Report comment instead of complex name

--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -175,8 +175,8 @@
                                                     submitted a
                                                     response for general form <a
                                                         href="{% url 'core:report_detail' report.pk %}"
-                                                        title=""><strong>{{ report.checklist.step_checklist }}
-                                                    Report</strong></a> in site <a href="#" title=""><strong>
+                                                        title=""><strong>{{ report.comment }}
+                                                    </strong></a> in site <a href="#" title=""><strong>
                                                     {{ report.checklist.step.site }}
                                                 </strong></a>.
                                                     <span class="time"><i class="la la-clock-o"
