pictures in site detail

--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -65,7 +65,7 @@
                                     <div class="col-md-6">
                                         <a href="#" title="" class="stat-item margin-top">
                                             <span class="stat-count">{{ project.total_sites }}</span>
-                                            <span class="stat-label">Sites</span>
+                                            <span class="stat-label">Schools</span>
                                             <i class="la la-building"></i>
                                         </a>
                                     </div>
